Changed getProducts to return an unmodifiable copy of the product list
Previously, the method returned a wrapper via Collections.unmodifiableList, which still referenced the internal list.
Now, List.copyOf(productList) is used, providing a true copy that cannot be modified externally.
This ensures that the internal data of the Warehouse cannot be affected by code outside the class.